@startuml
skinparam classAttributeIconSize 0
skinparam linetype ortho

title Diagrama de Classes - Sistema de Controle de Bonés

enum Bordado {
  COM_BORDADO
  SEM_BORDADO
  PERSONALIZADO
}

enum Perfil {
  ADM
  USER
}

class Bone {
  - id: Long
  - nome: String
  - cor: String
  - categoriaAba: String
  - tamanhoAba: Float
  - profundidade: Float
  - circunferencia: String
  - bordado: Bordado
  - preco: Double
}

class Marca {
  - id: Long
  - nome: String
}

class Material {
  - id: Long
  - nome: String
}

class Modelo {
  - id: Long
  - nome: String
  - categoria: String
  - estilo: String
}

abstract class Estampa {
  - id: Long
  - nome: String
  - posicao: String
  - descricao: String
  + getTipo(): String
}

class EstampaBordada {
  - corLinha: String
  - quantCores: Integer
}

class EstampaDigital {
  - resolucao: String
}

class Estoque {
  - id: Long
  - quantidade: Integer
  - dataAtualizacao: LocalDate
  + verificarDisponibilidade(): Boolean
  + atualizarQuantidade(quantidade: Integer): void
  + adicionarQuantidade(quantidade: Integer): void
}

class Usuario {
  - id: Long
  - nome: String
  - login: String
  - senha: String
  - perfil: Perfil
}

class Estado {
  - id: Long
  - nome: String
  - sigla: String
}

class Cidade {
  - id: Long
  - nome: String
}

class Endereco {
  - id: Long
  - cep: String
  - logradouro: String
  - numero: String
  - nomeDestinatario: String
}

abstract class Pagamento {
  - id: Long
  - valor: Double
  - data: LocalDateTime
  - status: String
}

class Pix {
  - chave: String
  - tipoChave: String
}

class Cartao {
  - nomeTitular: String
  - numero: String
  - validade: String
  - cvv: String
}

class Boleto {
  - codigoBarras: String
  - dataVencimento: LocalDate
}

class Pedido {
  - id: Long
  - data: LocalDateTime
  - cep: String
  - logradouro: String
  - numero: String
  - cidade: String
  - estado: String
  + getValorTotal(): Double
}

class ItemPedido {
  - id: Long
  - quantidade: Integer
  - preco: Double
  + getSubTotal(): Double
}

Estampa <|-- EstampaBordada
Estampa <|-- EstampaDigital

Pagamento <|-- Pix
Pagamento <|-- Cartao
Pagamento <|-- Boleto

Bone "0..*" o-- "1" Marca
Bone "0..*" o-- "1" Material
Bone "0..*" o-- "1" Modelo

Bone "1" *-- "1" Estoque
Bone "0..*" -- "0..*" Estampa

Estado "1" --> "0..*" Cidade
Cidade "1" --> "0..*" Endereco
Usuario "1" --> "0..*" Endereco

Usuario "1" --> "0..*" Pedido
Pedido "1" *-- "1" Pagamento
Pedido "1" *-- "1..*" ItemPedido
ItemPedido "0..*" --> "1" Bone

Bone ..> Bordado
Usuario ..> Perfil

@enduml